# climate-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  add_urls_to_db_via_gemini.py  agents.py  api.py  cache.py  chromium.py  cleanup_database.py  climate_rag.py  crag.ipynb  download_urls_with_errors.py  get_embedding_function.py  graph.py  helpers.py  llms.py  package.json  pandas_executor.ipynb  pdf_download.js  pdf_download.py  populate_database.py  process_pdf_via_gemini.py  prompts.py  pyproject.toml  query_data.py  requirements.txt  schemas.py  text_splitters.py  tools.py  webapp.py
src/: index.js
src/climate_rag/: add_urls_to_db_via_gemini.py  agents.py  api.py  cache.py  chromium.py  cleanup_database.py  constants.py  download_urls_with_errors.py  get_embedding_function.py  graph.py  helpers.py  llms.py  logo.py  populate_database.py  process_pdf_via_gemini.py  query_data.py  schemas.py  text_splitters.py  tools.py  webapp.py
static/: bundle.js  footer.html  header.html  index.html  qa.html  sources.html
